test/compile-fail/resolution/use/self-glob/expected.txt
error: cannot glob-import without a scope
 --> top.rhdl:1:10
  |
1 | use self::*;
  |           ^ this would re-import all crates and local items
